# aws-lambda-layer-cli

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  aws-lambda-layer  create_nodejs_layer.sh  create_python_layer.sh  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  uninstall.ps1  uninstall.sh
.github/workflows/: publish.yml
aws_lambda_layer_cli/: __init__.py  cli.py
aws_lambda_layer_cli/assets/: aws-lambda-layer-cli  create_python_layer.sh  create_wheel_layer.sh  uninstall.sh
aws_lambda_layer_cli/completion/: aws-lambda-layer-completion.zsh
completion/: aws-lambda-layer-completion.bash  aws-lambda-layer-completion.zsh
scripts/: aws-lambda-layer  aws-lambda-layer-cli  build_pypi.sh  create_python_layer.sh  create_wheel_layer.sh  install.js  install.ps1  install.sh  sync_version.js  uninstall.js  uninstall.ps1  uninstall.sh
scripts/pypi_resources/: cli.py
test/: common.sh  numpy_wheel_list.json  run_all.sh  test_cli_integration.sh  test_nodejs.sh  test_python_arch.sh  test_python_versions.sh  test_real_integration.sh  test_strict_usage.sh  test_wheel_validation.sh
