[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-lambda-layer-cli"
dynamic = ["version"]
description = "CLI tool for creating and publishing AWS Lambda layers for Node.js and Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
]
urls = {Source = "https://github.com/yukcw/aws-lambda-layer-cli", Issues = "https://github.com/yukcw/aws-lambda-layer-cli/issues"}

[project.scripts]
aws-lambda-layer-cli = "aws_lambda_layer_cli.cli:main"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_lambda_layer_cli*"]
exclude = ["test", "tests", "scripts"]

[tool.setuptools.package-data]
"aws_lambda_layer_cli" = ["assets/*", "completion/*", "VERSION.txt"]
